--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_serverURL=https://mems-server-production.up.railway.app/
+REACT_APP_serverURL=https://mems-server-production.up.railway.app
